--- a/css/style-1000px.css
+++ b/css/style-1000px.css
@@ -1,8 +1,55 @@
-body{min-width:960px;}
-body,input,textarea,select{font-size:11pt;}
-header{margin:0 0 4em 0;}
-.wrapper{padding:5em 0 5em 0;text-align:center;}
-.wrapper.first{padding-top:9em;}
-.wrapper.style4 .row-special{margin:2em 0 0 0;padding:2em 0 2em 0;}
-#top{}
-#top .image{width:19.5em;height:19.5em;margin:0;}
+body {
+    min-width: 960px;
+}
+
+body, input, textarea, select {
+    font-size: 11pt;
+}
+
+header {
+    margin: 0 0 4em 0;
+}
+
+.wrapper {
+    padding: 5em 0 5em 0;
+    text-align: center;
+}
+
+.wrapper.first {
+    padding-top: 9em;
+}
+
+.wrapper.style4 .row-special {
+    margin: 2em 0 0 0;
+    padding: 2em 0 2em 0;
+}
+
+#top {
+}
+
+#top .image {
+    width: 19.5em;
+    height: 19.5em;
+    margin: 0;
+}
+
+@media screen and (min-height: 1024px) {
+    .wrapper {
+        padding: 10em 0 10em 0;
+        text-align: center;
+    }
+}
+
+@media screen and (min-height: 1200px) {
+    .wrapper {
+        padding: 10em 0 10em 0;
+        text-align: center;
+    }
+}
+
+@media screen and (min-height: 900px) {
+    .wrapper {
+        padding: 6em 0 6em 0;
+        text-align: center;
+    }
+}
