--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -1,214 +1,222 @@
-/*
-	Miniport by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
+body, input, textarea, select {
+    line-height: 1.75em;
+    font-size: 10pt;
+    letter-spacing: 0;
+}
 
-/*********************************************************************************/
-/* Basic                                                                         */
-/*********************************************************************************/
+h1, h2, h3, h4, h5, h6 {
+    font-size: 1.25em;
+    margin: 0 0 0.4em 0;
+}
 
-	body,input,textarea,select
-	{
-		line-height: 1.75em;
-		font-size: 10pt;
-		letter-spacing: 0;
-	}
+h1 {
+    font-size: 2.25em;
+    line-height: 1.25em;
+}
 
-	h1, h2, h3, h4, h5, h6
-	{
-		font-size: 1.25em;
-		margin: 0 0 0.4em 0;
-	}
+h2 {
+}
 
-	h1
-	{
-		font-size: 2.25em;
-		line-height: 1.25em;
-	}
-	
-	h2
-	{
-	}
+header {
+    margin: 0 0 2em 0;
+}
 
-	header
-	{
-		margin: 0 0 2em 0;
-	}
-	
-		header > p
-		{
-			font-size: 1.25em;
-		}
+header > p {
+    font-size: 1.25em;
+}
 
-	footer
-	{
-		margin: 2.5em 0 0 0;
-	}
-	
-		footer > p
-		{
-			font-size: 1.25em;
-		}
+footer {
+    margin: 2.5em 0 0 0;
+}
 
-	hr
-	{
-		margin: 1.5em 0 2em 0;
-	}
+footer > p {
+    font-size: 1.25em;
+}
 
-	/* Section/Article */
-	
-		section,
-		article
-		{
-			clear: both;
-		}
+hr {
+    margin: 1.5em 0 2em 0;
+}
 
-	/* Button */
+/* Section/Article */
 
-		input[type="button"],
-		input[type="submit"],
-		input[type="reset"],
-		.button
-		{
-			text-align: center;
-			font-size: 1.2em;
-			width: 100%;
-			padding: 1em 0 1em 0;
-		}
+section,
+article {
+    clear: both;
+}
 
-	/* List */
+/* Button */
 
-		ul
-		{
-		}
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+.button {
+    text-align: center;
+    font-size: 1.2em;
+    width: 100%;
+    padding: 1em 0 1em 0;
+}
 
-			ul.social
-			{
-				padding: 1em 0.5em 0 0.5em;
-			}
+/* List */
 
-				ul.social li
-				{
-					margin: 0.5em 0.5em 0.5em 0.5em;
-				}
+ul {
+}
 
-					ul.social li a
-					{
-						top: 0 !important;
-					}
+ul.social {
+    padding: 1em 0.5em 0 0.5em;
+}
 
-						ul.social li a:before
-						{
-							background-color: transparent !important;
-						}
+ul.social li {
+    margin: 0.5em 0.5em 0.5em 0.5em;
+}
 
-			ul.actions
-			{
-				margin: 0;
-			}
+ul.social li a {
+    top: 0 !important;
+}
 
-				ul.actions li
-				{
-					display: block;
-					margin: 10px 0 0 0;
-				}
-				
-					ul.actions li:first-child
-					{
-						margin-top: 0;
-					}
+ul.social li a:before {
+    background-color: transparent !important;
+}
 
-	/* Box */
+ul.actions {
+    margin: 0;
+}
 
-		.box
-		{
-			padding: 30px 20px 30px 20px;
-			margin: 0 0 20px 0 !important;
-		}
+ul.actions li {
+    display: block;
+    margin: 10px 0 0 0;
+}
 
-			.box h3
-			{
-				margin-bottom: 0.25em;
-			}
+ul.actions li:first-child {
+    margin-top: 0;
+}
 
-			.box .image.centered
-			{
-				margin-bottom: 1em;
-			}
+/* Box */
 
-			.box .image.featured
-			{
-				position: relative;
-				left: 20px;
-				top: 20px;
-				margin: -50px 0 50px -40px;
-				width: auto;
-			}
+.box {
+    padding: 30px 20px 30px 20px;
+    margin: 0 0 20px 0 !important;
+}
+
+.box h3 {
+    margin-bottom: 0.25em;
+}
+
+.box .image.centered {
+    margin-bottom: 1em;
+}
+
+.box .image.featured {
+    position: relative;
+    left: 20px;
+    top: 20px;
+    margin: -50px 0 50px -40px;
+    width: auto;
+}
 
 /*********************************************************************************/
 /* Wrappers                                                                      */
 /*********************************************************************************/
 
-	.wrapper
-	{
-		padding: 3em 15px 3em 15px;
-		text-align: center;
-	}
+.wrapper {
+    padding: 3em 15px 3em 15px;
+    text-align: center;
+}
 
-		.wrapper.first
-		{
-			padding-top: 5em;
-		}
-	
+.wrapper.first {
+    padding-top: 5em;
+}
+
 /*********************************************************************************/
 /* Nav                                                                           */
 /*********************************************************************************/
 
-	#nav
-	{
-	}
-	
-		#nav a
-		{
-			padding: 0.5em;
-		}
-		
+#nav {
+}
+
+#nav a {
+    padding: 0.5em;
+}
+
 /*********************************************************************************/
 /* Articles                                                                      */
 /*********************************************************************************/
 
-	#top
-	{
-	}
+#top {
+}
 
-		#top .image
-		{
-			width: 70%;
-			height: auto;
-			margin: 0 auto 1.75em auto;
-		}
-	
-	#contact
-	{
-	}
-	
-		#contact footer
-		{
-			margin: 0;
-		}
-		
+#top .image {
+    width: 70%;
+    height: auto;
+    margin: 0 auto 1.75em auto;
+}
+
+#contact {
+}
+
+#contact footer {
+    margin: 0;
+}
+
 /*********************************************************************************/
 /* Copyright                                                                     */
 /*********************************************************************************/
 
-	#copyright
-	{
-		font-size: 1em;
-		margin: 0;
-	}
-	
-		#copyright li
-		{
-			display: block;
-		}
+#copyright {
+    font-size: 1em;
+    margin: 0;
+}
+
+#copyright li {
+    display: block;
+}
+
+@media screen and (max-height: 480px) {
+    h1 {
+        font-size: 1.45em;
+        line-height: 0em;
+    }
+
+    #top p {
+        font-size: 1em;
+        line-height: 1.6em;
+    }
+}
+
+@media screen and (min-height: 481px) {
+    h1 {
+        font-size: 1.75em;
+        line-height: 0em;
+    }
+
+    #top p {
+        font-size: 1.25em;
+    }
+}
+
+@media screen and (min-width: 510px) {
+    .image img {
+        display: inline-block;
+        width: 46%;
+    }
+}
+
+@media screen and (min-width: 510px) and (min-height: 336px) {
+    .image img {
+        display: inline-block;
+        width: 51%;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .image img {
+        display: inline-block;
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 736px) {
+    .image img {
+        display: inline-block;
+        width: 52%;
+    }
+}
