--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset 'UTF-8';
-@import url('http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,600italic,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,600italic,700');
 @import url('font-awesome.min.css');
 
 body, input, textarea, select {
@@ -693,4 +693,3 @@ ol.default li {
         width: 100%;
     }
 }
-
